...
            labelBehavior: largeText
                ? NavigationDestinationLabelBehavior.onlyShowSelected
                : NavigationDestinationLabelBehavior.alwaysShow,
            destinations: [
              for (var i = 0; i < labels.length; i++)
                NavigationDestination(
                  key: ValueKey('destination-$i'),
                  icon: Icon(icons[i]),
                  label: labels[i],
                  tooltip: labels[i],
                ),
            ],
          ),
...
